language_tests/source_files/invalid/result_maperr_requires_value_copy.tr
struct NonCopyValue {
    value: int32
}

func main() {
    let r: Result[NonCopyValue, int32] = .ok(NonCopyValue { value: 1 })
    let _ = r.mapErr(|e| -> int32 { e + 1 })
}
